crates/wac-parser/tests/parser/fail/async-not-func.wac
package test:comp;

type bad = async u32;
